# sqlite-vec-hnsw

./: ACTION_PLAN.md  CHANGELOG.md  CLAUDE.md  C_INSERT_PSEUDOCODE.md  Cargo.toml  EXACT_C_COMPARISON.md  FINDINGS.md  FIX_PLAN.md  IMPLEMENTATION_STATUS.md  OPTIMIZATION_PLAN.md  PARITY_STATUS.md  PERFORMANCE.md  PERF_PLAN.md  README.md  REMAINING_GAP_ANALYSIS.md  RUSQLITE_PATCH.md  RUST_VS_C_ANALYSIS.md  STATUS.md  SUMMARY.md  TODO_STATEMENT_CACHING.md  VERSION_FIX_SUMMARY.md  build.rs  deny.toml  deny.toml.bak
.github/workflows/: ci.yml  security.yml
benches/: recall_benchmark.rs  vector_operations.rs
examples/: basic_usage.rs  bench_standalone.rs  create_test_db.rs  debug_collinear.rs  debug_graph.rs  performance_report.rs  profile_insert.rs  samply_profile.rs  similarity_search.rs
rusqlite-patches/: 01-operator-registration.patch  02-db-handle-in-functions.patch  03-vtab-integrity.patch  INSTALL.md  README.md  apply-patches.sh
src/: connection_ext.rs  error.rs  lib.rs  shadow.rs  sql_functions.rs  vector.rs  vtab.rs
src/distance/: mod.rs  scalar.rs  simd.rs
src/hnsw/: cache.rs  insert.rs  mod.rs  rebuild.rs  search.rs  storage.rs  timing.rs
supply-chain/: config.toml
tests/: STRESS_TEST_BASELINE.md  bench_insert_1000.rs  bench_profiled.rs  integration_test.rs  profile_bottlenecks.rs  profile_int8_cosine.rs  profile_target_config.rs  test_c_compat.rs  test_c_compatibility.rs  test_chunk_diagnostic.rs  test_chunk_fill_efficiency.rs  test_disk_persistence.rs  test_edge_counts.rs  test_index_quantization.rs  test_inmemory_batching.rs  test_int8_quantization.rs  test_knn_simple.rs  test_multithread_stress.rs  test_prepared_statements.rs  test_quantization_perf.rs  test_read_c_database.rs  test_rebuild.rs  test_recall_accuracy.rs  test_recall_cosine.rs  test_recall_debug.rs  test_recall_perf.rs  test_scale.rs  test_shadow_tables.rs  test_storage_format.rs  test_transaction_batching.rs
