[package]
name = "sqlite-vec-hnsw"
version = "0.1.0"
edition = "2024"
authors = ["Brian Macy"]
license = "Apache-2.0"
description = "SQLite extension for vector search with HNSW indexing"
repository = "https://github.com/brianmacy/sqlite-vec-hnsw"

[lib]
name = "sqlite_vec_hnsw"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Using forked rusqlite with custom operator support, DB handle access, and integrity check
# Once PR is merged upstream, switch back to crates.io version
rusqlite = { git = "https://github.com/brianmacy/rusqlite", branch = "custom-vtab-features", features = ["bundled", "vtab", "blob", "functions"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
simsimd = "6.3"

[features]
default = []
# Enable to register additional module/entry point aliases via environment variables:
# - SQLITE_VEC_MODULE_ALIAS: Register module under this additional name
# - SQLITE_VEC_ENTRY_POINT_ALIAS: Export entry point with this additional name
loadable_extension_alias = []

[dev-dependencies]
tempfile = "3.8"
rand = "0.8"
criterion = "0.5"

[[bench]]
name = "vector_operations"
harness = false

[[bench]]
name = "recall_benchmark"
harness = false

[profile.dev]
opt-level = 2

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
